--- a/Final Js Project/ManageOrders.html
+++ b/Final Js Project/ManageOrders.html
@@ -9,13 +9,15 @@
   <link rel="stylesheet" href="ManageOrders.css">
   <link rel="stylesheet" href="SallerDashbord.css">
   <script src="ManageOrders.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="CheckUserRole.js"></script>
 </head>
 
 <body>
   <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
     <div class="logo">
-      <img src="../image/logo2.png" alt="Logo">
+      <img src="../image/logo3.png" alt="Logo">
     </div>
     <ul>
       <li><a href="SallerDashbord.html" class="nav-link">Dashboard Home</a></li>
