--- a/Final Js Project/cart.html
+++ b/Final Js Project/cart.html
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="cart.css">
   <script src="jq-3-7-1.js"></script>
  <script src="cart.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="CheckUserRole.js"></script>
    
 </head>
 <body>
@@ -61,7 +63,7 @@
             <!-- profile -->
             <a class="m-4" href="/customer_profile.html"><i id="profile" class="fa-solid fa-user fa-xl icon"></i></a>
                 <!-- logout -->
-                <a class="m-4" href="#"><i class="fa-solid fa-arrow-right-from-bracket fa-xl icon out"></i></a>
+                <a id="logout" class="m-4" href="#"><i class="fa-solid fa-arrow-right-from-bracket fa-xl icon out"></i></a>
                 </li>
             </div>
         </div>
