--- a/Final Js Project/customer_profile.html
+++ b/Final Js Project/customer_profile.html
@@ -6,6 +6,7 @@
     <title>Customer Profile - Swiss Arabian</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
 <header>
