--- a/Final Js Project/placeorder.html
+++ b/Final Js Project/placeorder.html
@@ -18,9 +18,7 @@
     <script>
         function RedirectHome()
         {
-            const location=window.location.origin +"/landscape/landscape.html";
-            history.replaceState(null,location,location);
-            window.location.href=location
+            window.location.href=window.location.origin +"/landscape/landscape.html";
         }
   
       </script>
