--- a/Final Js Project/AccountSettings.html
+++ b/Final Js Project/AccountSettings.html
@@ -10,13 +10,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" defer></script>
   <link rel="stylesheet" href="AccountSettings.css">
   <link rel="stylesheet" href="SallerDashbord.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="CheckUserRole.js"></script>
 </head>
 
 <body>
   <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
     <div class="logo">
-      <img src="../image/logo2.png" alt="Logo">
+      <img src="../image/logo3.png" alt="Logo">
     </div>
     <ul>
       <li><a href="SallerDashbord.html" class="nav-link">Dashboard Home</a></li>
