--- a/Final Js Project/AddAdmins.html
+++ b/Final Js Project/AddAdmins.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="admin.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   <script src="AddAdmins.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
   <!-- Sidebar -->
