--- a/Final Js Project/SalesAnalytics.html
+++ b/Final Js Project/SalesAnalytics.html
@@ -10,13 +10,15 @@
     <link rel="stylesheet" href="SalesAnalytics.css">
     <script src="SalesAnalytics.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="CheckUserRole.js"></script>
 </head>
 
 <body>
     <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
     <div class="logo">
-      <img src="../image/logo2.png" alt="Logo">
+      <img src="../image/logo3.png" alt="Logo">
     </div>
     <ul>
       <li><a href="SallerDashbord.html" class="nav-link">Dashboard Home</a></li>
