--- a/Final Js Project/SallerDashbord.html
+++ b/Final Js Project/SallerDashbord.html
@@ -7,13 +7,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="SallerDashbord.css">
   <script src="SallerDashbord.js" defer ></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="CheckUserRole.js"></script>
     
 </head>
 <body>
   <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
     <div class="logo">
-      <img src="../image/logo2.png" alt="Logo">
+      <img src="../image/logo3.png" alt="Logo">
     </div>
     <ul>
       <li><a href="SallerDashbord.html" class="nav-link">Dashboard Home</a></li>
@@ -38,19 +40,19 @@
   <div class="grid-container">
     <div class="grid-item">
       <h5>Total Products</h5>
-      <p>50</p>
+      <p></p>
     </div>
     <div class="grid-item">
       <h5>Total Orders</h5>
-      <p>120</p>
+      <p></p>
     </div>
     <div class="grid-item">
       <h5>Sales Analytics</h5>
-      <p>$10,000</p>
+      <p></p>
     </div>
     <div class="grid-item">
       <h5>Pending Orders</h5>
-      <p>8</p>
+      <p></p>
     </div>
     <!-- Best Seller (taking full width) -->
     <div class="grid-item full-width">
