--- a/Final Js Project/checkout.html
+++ b/Final Js Project/checkout.html
@@ -23,6 +23,8 @@
   
     <script src="jq-3-7-1.js"></script>
     <script src="checkout.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="CheckUserRole.js"></script>
 
   </head>
   <body >
@@ -71,7 +73,7 @@
                             </div>
     
                             <div class="col-12">
-                                <label for="PhoneNumber" class="form-label">Phone Number <span class="text-muted">(Optional)</span></label>
+                                <label for="PhoneNumber" class="form-label">Phone Number <span class="text-muted"></span></label>
                                 <input type="text" class=" form-control" id="PhoneNumber" placeholder="Phone Number">
                              <div class="invalid-feedback"></div>
                             </div>
