--- a/Final Js Project/customerservice.html
+++ b/Final Js Project/customerservice.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="customerservice.css">
     <script src="customerservice.js" defer ></script>
     <script src="./jq-3-7-1.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="CheckUserRole.js"></script>
 </head>
 <body>
       <!-- Sidebar -->
