--- a/Final Js Project/landscape/landscape.html
+++ b/Final Js Project/landscape/landscape.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
     integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Bootstrap JS (necessary for the navbar functionality) -->
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   
@@ -17,6 +17,10 @@
   <link rel="stylesheet" href="../base/footer.css">
   <link rel="stylesheet" href="landscape.css">
   <script src="landscape.js" defer></script>
+  <script src="../jq-3-7-1.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="../CheckUserRole.js"></script>
+ 
 
 
 
