--- a/Final Js Project/products.html
+++ b/Final Js Project/products.html
@@ -18,8 +18,11 @@
     <link rel="stylesheet" href="../base/footer.css">
     
     <link rel="stylesheet" href="product.css">
+
     <script src="./jq-3-7-1.js"></script>
     <script src="products.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="CheckUserRole.js"></script>
 </head>
 
 <body>
@@ -72,7 +75,7 @@
                     <!-- profile -->
                     <a class="m-4" href="/customer_profile.html"><i id="profile" class="fa-solid fa-user fa-xl icon"></i></a>
                     <!-- logout -->
-                    <a class="m-4" href="#"><i class="fa-solid fa-arrow-right-from-bracket fa-xl icon out"></i></a>
+                    <a id="logout" class="m-4" href="#"><i class="fa-solid fa-arrow-right-from-bracket fa-xl icon out"></i></a>
                     </li>
                 </div>
             </div>
