--- a/Final Js Project/seller_profile.html
+++ b/Final Js Project/seller_profile.html
@@ -6,6 +6,7 @@
     <title>Seller Profile</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <header>
